# simpsonapi_playground

./: README.md
backend/: .pre-commit-config.yaml  Dockerfile  docker-compose.yml  notes.md  pyproject.toml  simpsons copy.sqlite3  simpsons.sqlite3  test_simpsons.sqlite3
backend/simpsonapi_playground/: main.py
backend/simpsonapi_playground/core/: config.py  db.py  test_database_connection.py
backend/simpsonapi_playground/crud/: actor.py  catchphrase.py  character.py  episode.py  quotes.py  stat.py
backend/simpsonapi_playground/models/: __init__.py  actor.py  catchphrase.py  character.py  episode.py  quote.py  season.py
backend/simpsonapi_playground/routers/: actors.py  catchphrases.py  character.py  episodes.py  quotes.py  seasons.py  stats.py
backend/simpsonapi_playground/schemas/: actors_schemas.py  catchphrase_schemas.py  characters_schemas.py  episodes_schemas.py  quotes_schemas.py  schema.py  seasons_schemas.py  shared_schemas.py
backend/simpsonapi_playground/src/simpsonapi_playground/: main.py
backend/simpsonapi_playground/src/simpsonapi_playground/core/: config.py  db.py  test_database_connection.py
backend/simpsonapi_playground/utils/: batching_utilities.py
backend/tests/: conftest.py
backend/tests/actor/: test_actor_crud.py  test_actor_model.py  test_actor_routers.py  test_actor_schema.py  test_crud.py  test_routers.py  test_schema.py
backend/tests/actors/: test_actor_model.py  test_actor_routers.py
backend/tests/characters/: test_character_crud.py  test_character_model.py  test_character_routers.py  test_character_schema.py
(+12 files in other folders)
