[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Zh3ka21 <puzanov_zhenechk@ukr.net>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
alembic = ">=1.17.1,<2.0.0"
python-dotenv = ">=1.2.1,<2.0.0"
fastapi = ">=0.121.0,<0.122.0"
sqlalchemy = ">=2.0.44,<3.0.0"
passlib = ">=1.7.4,<2.0.0"
uvicorn = ">=0.38.0,<0.39.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
