[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Zh3ka21 <puzanov_zhenechk@ukr.net>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
alembic = ">=1.17.1,<2.0.0"
python-dotenv = ">=1.2.1,<2.0.0"
fastapi = ">=0.121.0,<0.122.0"
sqlalchemy = ">=2.0.44,<3.0.0"
passlib = ">=1.7.4,<2.0.0"
uvicorn = ">=0.38.0,<0.39.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.19.1"
ruff = "^0.15.0"
pre-commit = "^4.5.1"
pytest = "^9.0.2"
httpx = "^0.28.1"

[tool.mypy]
files = "simpsonapi_playground"
ignore_missing_imports = true
show_error_codes = true
strict = true

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["simpsonapi_playground"]
exclude = ["tests/fixtures", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "C90"]
ignore = ["F401", "W291"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
